<resources>
    <string name="app_name">ASettings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="tv_menu">メニュー</string>
    <string name="main_menu_prs">駐車録画設定</string>
    <string name="main_menu_fp">ファイル再生</string>
    <string name="main_menu_mirs">動画記録設定</string>
    <string name="main_menu_vt">車両タイプ設定</string>
    <string name="main_menu_dsfs">運転支援機能設定</string>
    <string name="main_menu_nsg">音声案内</string>
    <string name="main_menu_ss">システム設定</string>
    <string name="main_menu_scm">SDカードメニュー</string>
    <string name="main_menu_si">サービスメニュー</string>
    <string name="main_menu_cs">通信機能設定</string>

    <string name="tv_system_settings">システム設定</string>
    <string name="tv_system_settings_date_time">日付/時刻</string>
    <string name="tv_system_settings_notification_sound_volume">報知音音量</string>
    <string name="tv_system_settings_playback_volume">再生音量</string>
    <string name="tv_system_settings_preview">映像確認</string>
    <string name="tv_system_settings_lcd_brightness">モニター明るさ</string>
    <string name="tv_system_settings_screen_power_saving">モニター画面節電設定</string>
    <string name="tv_system_settings_installation_tool">設置ツール</string>
    <string name="tv_system_settings_bluetooth">Bluetooth設定</string>
    <string name="tv_system_settings_infrared_led">Infrared LED</string>
    <string name="tv_system_settings_setting_initialization">設定初期化</string>
    <string name="tv_system_settings_installation_wizard">セットアップ</string>
    <string name="tv_system_settings_2nd_camera">2ndカメラ設定</string>
    <string name="tv_system_settings_system_update">システム更新</string>
    <string name="tv_system_settings_system_information">システム情報</string>

    <string name="parking_record_rt">録画時間</string>
    <string name="parking_record_settings">駐車録画設定 </string>
    <string name="parking_recording_off">OFF</string>
    <string name="time_10s">10秒</string>
    <string name="time_20s">20秒</string>
    <string name="time_30s">30秒</string>
    <string name="record_time_setting">録画時間設定</string>
    <string name="audio_recording">音声記録</string>
    <string name="impact_detection_sensitivity">衝撃検知感度</string>
    <string name="information_stamp_record">情報スタンプ記録</string>
    <string name="movie_record_setting">動画記録設定</string>
    <string name="inserted_ok">OK</string>

    <string name="sdcard_setting">SDカードメニュー</string>
    <string name="sdcard_setting_information">SDカード情報</string>
    <string name="sdcard_setting_initialization">SDカード初期化</string>
    <string name="sdcard_normal_dir">常時録画 : </string>
    <string name="sdcard_event_dir">イベント記録 : </string>
    <string name="sdcard_parking_dir">駐車録画 : </string>
    <string name="sdcard_picture_dir">静止画 : </string>
    <string name="sdcard_not_exist">SDカードがありません</string>
    <string name="sdcard_init_prompt">SDカードを初期化しますか？</string>
    <string name="sdcard_init_cancel">Cancel</string>
    <string name="sdcard_init_ok">OK</string>
    <string name="sdcard_init_ongoing">初期化中</string>
    <string name="sdcard_init_success">初期化しました</string>
    <string name="sdcard_init_fail">初期化に失敗しました</string>

    <string name="tv_date_time">日付/時刻</string>
    <string name="tv_automatic">自動調整</string>
    <string name="tv_manual">手動設定</string>
    <string name="tv_date_time_setting">日時設定画面</string>
    <string name="tv_notifacation_valume">音量設定画面</string>
    <string name="tv_playback_valume">音量設定画面</string>
    <string name="tv_brightness_title">モニター明るさ +2</string>
    <string name="tv_monitor_time_settings">時間設定</string>
    <string name="tv_monitor_time_10sec">10秒</string>
    <string name="tv_monitor_time_1min">１分</string>
    <string name="tv_monitor_time_3min">３分</string>
    <string name="tv_monitor_operation_settings">動作設定</string>
    <string name="tv_monitor_operation_on">常時点灯</string>
    <string name="tv_monitor_operation_off">消灯</string>
    <string name="tv_monitor_operation_dim">暗くする</string>

    <string name="vehicle_type">車両タイプ</string>
    <string name="vehicle_type_mini_sedan">軽自動車セダン</string>
    <string name="vehicle_type_minivan">軽自動車ワンボックス</string>
    <string name="vehicle_type_medium_sedan">5、7ナンバーセダン</string>
    <string name="vehicle_type_rv">5、7ナンバーワゴン/RV/ワンボックス</string>
    <string name="vehicle_type_large_sedan">3ナンバーセダン</string>
    <string name="vehicle_type_suv">3ナンバーワゴン/RV/ワンボックス</string>
    <string name="vehicle_type_others">その他</string>

    <string name="sys_phone_number">電話番号</string>
    <string name="sys_network">ネットワーク</string>
    <string name="sys_signal_strength">電波強度</string>
    <string name="network_type">ネットワークの種類</string>
    <string name="sys_imei">IMEI</string>
    <string name="sys_service_status">サービスの状態</string>
    <string name="sys_network_status">ネットワークの状態</string>
    <string name="sys_version">システムバージョン X.XX</string>
    <string name="sys_sim">SIM情報</string>
    <string name="sys_open_license">オープンソースライセンス</string>
    <string name="net_conn">接続</string>
    <string name="net_not_conn">接続されていない</string>
    
    <string name="driving_setting_range_horizon">地平線の位置に線を移動させ、決定ボタンを押してください</string>
    <string name="driving_setting_range_hood">ボンネット先端の位置に線を移動させ、決定ボタンを押してください</string>
    <string name="driving_setting_range_center">走行車線の中心に線を移動させ、決定ボタンを押してください</string>

    <string name="installation_tool_leveler">水準器</string>
    <string name="installation_tool_satellite">衛星受信状態</string>
    <string name="leveler_detail_title">水準器画面</string>
    <string name="leveler_detail_context1">ドライブレコーダーが水平になるように調節します。</string>
    <string name="leveler_detail_context2">1.車を安全で水平な場所に駐車します。</string>
    <string name="leveler_detail_context3">2.次の画面で、動く円が中央に来るように本機の傾きを調節してください。</string>
    <string name="gps_status_title">ＧＰＳ受信強度画面</string>
    <string name="communication">通信機能設定</string>
    <string name="communication_emergency_contact_person">緊急連絡先の表示</string>
    <string name="communication_emergency_automatic_notification">緊急自動通報設定</string>
    <string name="communication_emergency_automatic_notification_on">ON</string>
    <string name="communication_emergency_automatic_notification_off">OFF</string>
    <string name="system_version">システムバージョン X.XX</string>
    <string name="mounting_position">取付位置</string>
    <string name="mounting_position_left">左</string>
    <string name="mounting_position_middle">中央</string>
    <string name="mounting_position_right">右</string>
    <string name="weather_report">気象通知</string>
    <string name="help">ヘルプインデックス</string>
    <string name="service_information_notified">位置情報サービスより気象情報を通知する</string>
    <string name="main_menu_us">ユーザー選択</string>
    <string name="set_wizard_help_context_start_setting">セットアップを開始しますか？</string>
    <string name="set_wizard_help_context_vehicle_type">運転支援機能の精度を上げるために設定します。\n本機を取り付ける車のナンバーと形状から、\n最も近い車両タイプを選択してください。</string>
    <string name="set_wizard_help_context_mounting_position">走行車線を正しく検出するために設定します。\n中央から**㎝以内に設置したときは中央、\n中央から**㎝より右側に設置したときは右、\n中央から**㎝より左側に設置したときは左を選択してください</string>
    <string name="set_wizard_help_context_range">運転支援機能の検出範囲を設定します。\n走行車線を正しく検出するために必要な設定です。\n地平線の位置、車体の先端部（ボンネットなど）、\n走行車線の中心にガイド線を移動して設定します。</string>
    <string name="set_wizard_help_finish">セットアップが完了しました</string>

    <string name="check_update">Is check update package</string>
    <string name="sure_to_update">システム更新を開始しますか？</string>
    <string name="package_not_exist">更新可能なファイルがありません</string>
    <string name="sure_to_restore_factory_Settings">設定をリセットしますか？</string>
    <string name="sure">OK</string>

    <!--底部滚动条提示内容-->
    <string name="driving_setting_marqueeText_front">ONに設定すると、自車と前走車との距離が近くなった時にお知らせします</string>
    <string name="driving_setting_marqueeText_lane">ONに設定すると、自車が走行車線をはみ出した時にお知らせします</string>
    <string name="driving_setting_marqueeText_departure">ONに設定すると、自車が停車中に前走車との距離が遠くなった時にお知らせします</string>
    <string name="driving_setting_marqueeText_install">走行車線を正しく検出するために設定します。本機を取り付けた水平方向の位置を選択します</string>
    <string name="driving_setting_marqueeText_pedestrain">ONに設定すると、歩行者が近づいた時にお知らせします</string>

    <string name="user_marqueeText">運転された方ごとに運転レポートを作成するために、車を運転される方を選びます</string>
    <string name="movie_record_marqueeText_audio">OFFに設定すると、内蔵マイクによる音声の記録を停止します</string>
    <string name="movie_record_marqueeText_impact">イベント記録を開始するための衝撃センサー感度を設定します</string>
    <string name="movie_record_marqueeText_information">OFFに設定すると、日時や位置情報などの字幕記録を停止します</string>
    <string name="Vehicle_marqueeText">運転支援機能の精度を上げるために設定します。ご使用の車のナンバーと形状から、最も近い車両タイプを選択します</string>
    <string name="system_setting_monitor_time">モニター画面が節電に移行する時間を設定します</string>
    <string name="system_setting_monitor_operation">モニター画面の節電動作を設定します。節電を行わないときはOFFに設定します</string>
    <string name="system_setting_install_leveler">本機を設置するときに便利なツールです</string>
    <string name="communication_emergency_notify">OFFに設定すると、事故が発生したときなどでもコールセンターに自動通報しません</string>

    <string name="driving_setting">運転支援機能設定</string>
    <string name="front_collision_warning">前方衝突警告</string>
    <string name="lane_departure_warning">車線逸脱警告</string>
    <string name="pedestrian_detection">歩行者衝突警告</string>
    <string name="device_install_setting">取付位置</string>
    <string name="departure_delay_warning">発進遅れ警告</string>

    <string name="reverse_run_detection">逆走検知時</string>
    <string name="speed_regulation_area">時速30㎞規制区域(ゾーン30)</string>
    <string name="pause">一時停止</string>
    <string name="accident_frequently_occurring_area">事故多発地域接近時</string>
    <string name="driving_time">走行時間</string>
    <string name="rapid_acceleration_sudden_deceleration">急加速,急減速時</string>
    <string name="handling">ハンドリング</string>
    <string name="fluctuation_detection">ふらつき検知</string>
    <string name="driving_outside_the_designated_area">指定区域外走行検知時</string>
    <string name="driving_report">運転レポート</string>
    <string name="advice_before_driving">運転前アドバイス</string>
    <string name="notification">お知らせ</string>
    <string name="weather_information">気象情報</string>
    <string name="road_kill">動物飛び出し(ロードキル)</string>
    <string name="location_information">位置情報に関する通知</string>

    <string name="skip">Skip</string>
    <string name="sdcard_info_title">Number of files in each folder</string>
    <string name="sdcard_info_context_explane">Current / Maximum</string>

</resources>
