<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/sdcard_init_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sdcard_init_prompt" />

        <ProgressBar
            android:id="@+id/sdcard_init_progress"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/sdcard_init_cancel_bt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:nextFocusLeft="@id/sdcard_init_ok_bt"
                android:nextFocusRight="@id/sdcard_init_ok_bt"
                android:backgroundTint="@drawable/sdcard_button_background"
                android:text="@string/sdcard_init_cancel"
                android:textColor="@color/textcolor_select" />
            <Button
                android:id="@+id/sdcard_init_ok_bt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:nextFocusLeft="@id/sdcard_init_cancel_bt"
                android:nextFocusRight="@id/sdcard_init_cancel_bt"
                android:backgroundTint="@drawable/sdcard_button_background"
                android:textColor="@color/textcolor_select"
                android:text="@string/sdcard_init_ok" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>
