<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:gravity="center_horizontal"
    android:background="@drawable/bg_menu_main"
    android:orientation="vertical">

    <include
        android:id="@+id/leveler_detail_title"
        layout="@layout/title_layout" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="@dimen/view_margin_top"
        android:layout_marginRight="@dimen/title_margin_top"
        android:paddingTop="@dimen/view_margin_top"
        android:paddingBottom="@dimen/view_margin_top"
        android:background="@drawable/bg_level_adjustment"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/view_margin_top"
            android:text="@string/leveler_detail_context1"
            android:textColor="@color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/view_margin_top"
            android:text="@string/leveler_detail_context2"
            android:textColor="@color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/view_margin_top"
            android:text="@string/leveler_detail_context3"
            android:textColor="@color/white" />
    </LinearLayout>

    <include
        layout="@layout/right_button_layout"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentEnd="true" />

    <include
        layout="@layout/bottom_button_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true" />

</RelativeLayout>