<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg_menu_main"
    >

    <include layout="@layout/title_layout" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:gravity="center">

    <TextView
        android:id="@+id/sdcard_setting_information"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sdcard_setting_information"
        android:textColor="@color/white"
        android:visibility="gone"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dip"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/sdcard_normal_dir"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/sdcard_normal_dir" />

            <TextView
                android:id="@+id/sdcard_normal_dir_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:textColor="@color/white"
                android:text="" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dip"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/sdcard_event_dir"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/sdcard_event_dir" />

            <TextView
                android:id="@+id/sdcard_event_dir_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:textColor="@color/white"
                android:text="" />
        </LinearLayout>




    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dip"
        android:gravity="center_horizontal"
        android:orientation="horizontal">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/sdcard_parking_dir"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/sdcard_parking_dir" />

            <TextView
                android:id="@+id/sdcard_parking_dir_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:textColor="@color/white"
                android:text="" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dip"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/sdcard_picture_dir"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/sdcard_picture_dir" />

            <TextView
                android:id="@+id/sdcard_picture_dir_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:textColor="@color/white"
                android:text="" />
        </LinearLayout>

    </LinearLayout>
    </LinearLayout>
</LinearLayout>
